--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                                         <li><h5 class="uk-text uk-text-bold">Applications</h5></li>
                                         <li class="uk-active"><a class="nav-app" href="index.html"><span uk-icon="comment" class="uk-margin-small-right"></span> Dashboard</a></li>
                                         <li class=""><a class="nav-app" href="forms.html"><span uk-icon="comment" class="uk-margin-small-right"></span> Form</a></li>
-                                        <li class=""><a class="nav-app" href="tables.html"><span uk-icon="file-text" class="uk-margin-small-right"></span> Tables</a></li>
-                                        <li class=""><a class="nav-app" href="cards.html"><span uk-icon="mail" class="uk-margin-small-right"></span> Cards</a></li>
+                                        <li class=""><a class="nav-app" href="#"><span uk-icon="file-text" class="uk-margin-small-right"></span> Tables</a></li>
+                                        <li class=""><a class="nav-app" href="#"><span uk-icon="mail" class="uk-margin-small-right"></span> Cards</a></li>
                                         <li class=""><a class="nav-app" href="#"><span uk-icon="calendar" class="uk-margin-small-right"></span> Task Board</a></li>
                                         <li class=""><a class="nav-app" href="#"><span uk-icon="file-pdf" class="uk-margin-small-right"></span> Notes</a></li>
                                         <li class="uk-nav-divider"></li>
@@ -165,8 +165,8 @@
                             <li><h5 class="uk-text ">Applications</h5></li>
                             <li class="uk-active"><a class="nav-app" href="index.html"><span uk-icon="home" class=""></span> Dashboard</a></li>
                             <li class=""><a class="nav-app" href="forms.html"><span uk-icon="comment" class=""></span> Form</a></li>
-                            <li class=""><a class="nav-app" href="tables.html"><span uk-icon="file-text" class=""></span> Tables</a></li>
-                            <li class=""><a class="nav-app" href="cards.html"><span uk-icon="mail" class=""></span> Cards</a></li>
+                            <li class=""><a class="nav-app" href="#"><span uk-icon="file-text" class=""></span> Tables</a></li>
+                            <li class=""><a class="nav-app" href="#"><span uk-icon="mail" class=""></span> Cards</a></li>
                             <li class=""><a class="nav-app" href="#"><span uk-icon="calendar" class=""></span> Task Board</a></li>
                             <li class=""><a class="nav-app" href="#"><span uk-icon="file-pdf" class=""></span> Notes</a></li>
                             <li class="uk-nav-divider"></li>
