--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                         <h3 class="uk-margin-remove">45000</h3>
                                     </div>
                                     <div class="uk-margin-remove uk-padding-remove">
-                                            <img src="icons/global.svg" alt="" width="50">
+                                            <img src="icons/money.png" alt="" width="50">
                                     </div>
                                 </div>
                             </div>
@@ -266,7 +266,7 @@
                                         <h3 class="uk-margin-remove">45000</h3>
                                     </div>
                                     <div class="uk-margin-remove uk-padding-remove">
-                                        <img src="icons/graduation.svg" alt="" width="50">
+                                        <img src="icons/cal.png" alt="" width="50">
                                     </div>
                                 </div>
                             </div>
@@ -284,7 +284,7 @@
                                     <h3 class="uk-margin-remove">45000</h3>
                                 </div>
                                 <div class="uk-margin-remove uk-padding-remove">
-                                        <img src="icons/global.svg" alt="" width="50">
+                                        <img src="icons/money.png" alt="" width="50">
                                 </div>
                             </div>
                             <hr>
@@ -294,7 +294,7 @@
                                     <h3 class="uk-margin-remove">45000</h3>
                                 </div>
                                 <div class="uk-margin-remove uk-padding-remove">
-                                        <img src="icons/global.svg" alt="" width="50">
+                                        <img src="icons/cal.png" alt="" width="50">
                                 </div>
                             </div>
                             <hr>
@@ -304,7 +304,7 @@
                                     <h3 class="uk-margin-remove">45000</h3>
                                 </div>
                                 <div class="uk-margin-remove uk-padding-remove">
-                                        <img src="icons/global.svg" alt="" width="50">
+                                        <img src="icons/graduation.svg" alt="" width="50">
                                 </div>
                             </div>
                         </div>
@@ -356,7 +356,7 @@
                                     <h3 class="uk-margin-remove">45000</h3>
                                 </div>
                                 <div class="uk-margin-remove uk-padding-remove">
-                                        <img src="icons/global.svg" alt="" width="50">
+                                        <img src="icons/money.png" alt="" width="50">
                                 </div>
                             </div>
                             <hr>
@@ -366,7 +366,7 @@
                                     <h3 class="uk-margin-remove">45000</h3>
                                 </div>
                                 <div class="uk-margin-remove uk-padding-remove">
-                                        <img src="icons/global.svg" alt="" width="50">
+                                        <img src="icons/cal.png" alt="" width="50">
                                 </div>
                             </div>
                             <hr>
@@ -376,7 +376,7 @@
                                     <h3 class="uk-margin-remove">45000</h3>
                                 </div>
                                 <div class="uk-margin-remove uk-padding-remove">
-                                        <img src="icons/global.svg" alt="" width="50">
+                                        <img src="icons/graduation.svg" alt="" width="50">
                                 </div>
                             </div>
                         </div>
