profile cards and tables

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </a>
                         <div class="uk-navbar-dropdown" uk-dropdown="mode: click">
                             <ul class="uk-nav uk-navbar-dropdown-nav">
-                                <li class="uk-active"><a href="#"> <span uk-icon="user"></span> Profile</a></li>
+                                <li class="uk-active"><a href="profile.html"> <span uk-icon="user"></span> Profile</a></li>
                                 <li><a href="#"> <span uk-icon="cog"></span> Setting</a></li>
                                 <li><a href="#"> <span uk-icon="sign-out"></span> Logout</a></li>
                             </ul>
@@ -101,53 +101,53 @@
                     <div class="uk-offcanvas-bar">
                         <button class="uk-offcanvas-close" type="button" uk-close></button>
                         <div class=" uk-panel uk-panel-box uk-padding-small uk-border uk-margin-top" >
-                                <ul class="uk-nav uk-nav-parent-icon uk-list" data-uk-nav>
-                                        <li><h5 class="uk-text uk-text-bold">Applications</h5></li>
-                                        <li class="uk-active"><a class="nav-app" href="index.html"><span uk-icon="comment" class="uk-margin-small-right"></span> Dashboard</a></li>
-                                        <li class=""><a class="nav-app" href="forms.html"><span uk-icon="comment" class="uk-margin-small-right"></span> Form</a></li>
-                                        <li class=""><a class="nav-app" href="#"><span uk-icon="file-text" class="uk-margin-small-right"></span> Tables</a></li>
-                                        <li class=""><a class="nav-app" href="#"><span uk-icon="mail" class="uk-margin-small-right"></span> Cards</a></li>
-                                        <li class=""><a class="nav-app" href="#"><span uk-icon="calendar" class="uk-margin-small-right"></span> Task Board</a></li>
-                                        <li class=""><a class="nav-app" href="#"><span uk-icon="file-pdf" class="uk-margin-small-right"></span> Notes</a></li>
-                                        <li class="uk-nav-divider"></li>
-                                        <li><h5 class="uk-text uk-text-bold">Menu</h5></li>
-                                        <li class="uk-active"><a class="nav-app" href="#"><span uk-icon="comment" class="uk-margin-small-right"></span> Dashboard</a></li>
-                                        <li class="uk-parent">
-                                            <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Forms</a>
-                                            <ul class="uk-nav-sub uk-list">
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="uk-parent">
-                                            <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Components</a>
-                                            <ul class="uk-nav-sub uk-list">
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="uk-parent">
-                                            <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Pages</a>
-                                            <ul class="uk-nav-sub uk-list">
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="uk-parent">
-                                            <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Plugins</a>
-                                            <ul class="uk-nav-sub uk-list">
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="uk-parent">
-                                            <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Plugins</a>
-                                            <ul class="uk-nav-sub uk-list">
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
-                                                <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
-                                            </ul>
-                                        </li>
-                                </ul>
+                            <ul class="uk-nav uk-nav-default uk-nav-parent-icon uk-list" data-uk-nav>
+                                <li><h5 class="uk-text ">Applications</h5></li>
+                                <li class="uk-active"><a class="nav-app" href="index.html"><span uk-icon="home" class=""></span> Dashboard</a></li>
+                                <li class=""><a class="nav-app" href="forms.html"><span uk-icon="comment" class=""></span> Form</a></li>
+                                <li class=""><a class="nav-app" href="tables.html"><span uk-icon="file-text" class=""></span> Tables</a></li>
+                                <li class=""><a class="nav-app" href="cards.html"><span uk-icon="mail" class=""></span> Cards</a></li>
+                                <li class=""><a class="nav-app" href="#"><span uk-icon="calendar" class=""></span> Task Board</a></li>
+                                <li class=""><a class="nav-app" href="#"><span uk-icon="file-pdf" class=""></span> Notes</a></li>
+                                <li class="uk-nav-divider"></li>
+                                <li><h5 class="uk-text">Menu</h5></li>
+                                <li class="uk-active"><a class="nav-app" href="#"><span uk-icon="comment" class=""></span> Dashboard</a></li>
+                                <li class="uk-parent">
+                                    <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Forms</a>
+                                    <ul class="uk-nav-sub uk-list">
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
+                                    </ul>
+                                </li>
+                                <li class="uk-parent">
+                                    <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Components</a>
+                                    <ul class="uk-nav-sub uk-list">
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
+                                    </ul>
+                                </li>
+                                <li class="uk-parent">
+                                    <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Pages</a>
+                                    <ul class="uk-nav-sub uk-list">
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
+                                    </ul>
+                                </li>
+                                <li class="uk-parent">
+                                    <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Plugins</a>
+                                    <ul class="uk-nav-sub uk-list">
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
+                                    </ul>
+                                </li>
+                                <li class="uk-parent">
+                                    <a class="uk-link-text nav-app" href="#"><span uk-icon="file-text"></span> Plugins</a>
+                                    <ul class="uk-nav-sub uk-list">
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="cloud-upload"></span> File Upload</a></li>
+                                        <li><a class="uk-link-text" href="#"><span uk-icon="file"></span> Files</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                     </div>
             </div>
@@ -165,8 +165,8 @@
                             <li><h5 class="uk-text ">Applications</h5></li>
                             <li class="uk-active"><a class="nav-app" href="index.html"><span uk-icon="home" class=""></span> Dashboard</a></li>
                             <li class=""><a class="nav-app" href="forms.html"><span uk-icon="comment" class=""></span> Form</a></li>
-                            <li class=""><a class="nav-app" href="#"><span uk-icon="file-text" class=""></span> Tables</a></li>
-                            <li class=""><a class="nav-app" href="#"><span uk-icon="mail" class=""></span> Cards</a></li>
+                            <li class=""><a class="nav-app" href="tables.html"><span uk-icon="file-text" class=""></span> Tables</a></li>
+                            <li class=""><a class="nav-app" href="cards.html"><span uk-icon="mail" class=""></span> Cards</a></li>
                             <li class=""><a class="nav-app" href="#"><span uk-icon="calendar" class=""></span> Task Board</a></li>
                             <li class=""><a class="nav-app" href="#"><span uk-icon="file-pdf" class=""></span> Notes</a></li>
                             <li class="uk-nav-divider"></li>
@@ -210,8 +210,8 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
 
         <!-- body contents  -->
         <div class="uk-width-expand@m uk-margin-remove padding-remove">
