--- a/cards.html
+++ b/cards.html
@@ -210,50 +210,76 @@
 
         <!-- body contents  -->
         <div class="uk-width-expand@m uk-margin-remove padding-remove">
-        <section class="content1 uk-container uk-margin-bottom">
-            <h4>From</h4>
-            <!-- content start  -->
-           <div class="uk-card-default uk-padding uk-border-rounded">
-                <form class=" uk-form-stacked">
-                        <legend class="uk-legend">Form</legend>
-                        <div class="uk-margin">
-                            <label class="uk-form-label" for="form-stacked-text">Name :</label>
-                            <div class="uk-form-controls">
-                                <input class="uk-input custom-input" id="form-stacked-text" type="text" placeholder="Enter Your Name..">
-                            </div>
-                        </div>
-                        <div class="uk-margin">
-                            <label class="uk-form-label" for="form-stacked-text">Email :</label>
-                            <div class="uk-form-controls">
-                                <input class="uk-input custom-input" id="form-stacked-text" type="email" placeholder="Enter Your Email..">
-                            </div>
-                        </div>
-                        <div class="uk-margin">
-                            <label class="uk-form-label" for="form-stacked-text">Mobile :</label>
-                            <div class="uk-form-controls">
-                                <input class="uk-input custom-input" id="form-stacked-text" type="text" pattern="[0-9]{10}" placeholder="Enter Your Number..">
-                            </div>
-                        </div>
-                        <div class="uk-margin">
-                            <label class="uk-form-label" for="form-stacked-select">Select</label>
-                            <div class="uk-form-controls">
-                                <select class="uk-select custom-input" id="form-stacked-select">
-                                    <option>Option 01</option>
-                                    <option>Option 02</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="uk-margin">
-                            <textarea class="uk-textarea custom-input" rows="5" placeholder="Textarea"></textarea>
-                        </div>
-                        <p uk-margin>
-                            <button class="uk-button uk-button-primary">Submit</button>
-                        </p>
-                    </form>
-           </div>
+        <section class="content1 uk-container">
+            <h4>Card</h4>
+            <!-- content section  -->
+            <div uk-grid uk-height-match=".card">
+                    <div class="uk-width-1-2@s">
+                            <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                                <div uk-grid style="display: flex; justify-content: space-between;">
+                                    <div><h3 class="uk-card-title uk-widht-3-4">Default</h3></div>
+                                    <div><p class="uk-width-expand"><img src="icons/global.svg" alt="" width="50"></p></div>
+                                </div>
 
+                                <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                    </div>
+                    <div class="uk-width-1-2@s">
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div uk-grid style="display: flex; justify-content: space-between;">
+                                <div><h3 class="uk-card-title uk-widht-3-4">Default</h3></div>
+                                <div><p class="uk-width-expand"><img src="icons/global.svg" alt="" width="50"></p></div>
+                            </div>
+
+                            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+            </div>
+            <div uk-grid>
+                <div class="uk-width-1-2@s">
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                        <div uk-grid style="display: flex; justify-content: space-between;">
+                            <div><h3 class="uk-card-title uk-widht-3-4">Default</h3></div>
+                            <div><p class="uk-width-expand"><img src="icons/global.svg" alt="" width="50"></p></div>
+                        </div>
+
+                        <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+                <div class="uk-width-1-2@s">
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                        <div uk-grid style="display: flex; justify-content: space-between;">
+                            <div><h3 class="uk-card-title uk-widht-3-4">Default</h3></div>
+                            <div><p class="uk-width-expand"><img src="icons/global.svg" alt="" width="50"></p></div>
+                        </div>
+
+                        <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
+            <div uk-grid>
+                <div class="uk-width-1-2@s">
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                        <div uk-grid style="display: flex; justify-content: space-between;">
+                            <div><h3 class="uk-card-title uk-widht-3-4">Default</h3></div>
+                            <div><p class="uk-width-expand"><img src="icons/global.svg" alt="" width="50"></p></div>
+                        </div>
+
+                        <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+                <div class="uk-width-1-2@s">
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                        <div uk-grid style="display: flex; justify-content: space-between;">
+                            <div><h3 class="uk-card-title uk-widht-3-4">Default</h3></div>
+                            <div><p class="uk-width-expand"><img src="icons/global.svg" alt="" width="50"></p></div>
+                        </div>
+
+                        <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
         </section>
-        </div>
     </div>
 </body>
 </html>
